@@ -1,0 +1,9 @@
+CORE
+elsif2.v
+--preprocess
+^ELSIF$
+^EXIT=0$
+^SIGNAL=0$
+--
+^IFDEF$
+--
